--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
 assets/database/hadith_bn_test.db filter=lfs diff=lfs merge=lfs -text
