--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   drift_dev: ^2.13.0
   build_runner: ^2.4.6
+  hexagon: ^0.2.0
+  intl: ^0.18.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,6 +80,9 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   fonts:
+     - family: Sultan
+       fonts:
+         - asset: assets/fonts/sultan.ttf
      - family: Bangla
        fonts:
          - asset: assets/fonts/bangla.ttf
